docs(pkgdown): Manually deploy docs for v0.4

--- a/PULL_REQUEST_TEMPLATE.html
+++ b/PULL_REQUEST_TEMPLATE.html
@@ -10,7 +10,7 @@
     
     <a class="navbar-brand me-2" href="index.html">SCDB</a>
 
-    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">0.3</small>
+    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">0.4.0</small>
 
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,12 +19,14 @@
 
     <div id="navbar" class="collapse navbar-collapse ms-3">
       <ul class="navbar-nav me-auto"><li class="nav-item">
+  <a class="nav-link" href="articles/SCDB.html">Get started</a>
+</li>
+<li class="nav-item">
   <a class="nav-link" href="reference/index.html">Reference</a>
 </li>
 <li class="nav-item dropdown">
   <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="dropdown-articles">Articles</a>
   <div class="dropdown-menu" aria-labelledby="dropdown-articles">
-    <a class="dropdown-item" href="articles/basic-principles.html">Basic principles</a>
     <a class="dropdown-item" href="articles/slowly-changing-dimension.html">Slowly Changing Dimension methodology</a>
   </div>
 </li>
@@ -74,15 +76,10 @@
 </div>
 <div class="section level3">
 <h3 id="checklist">Checklist<a class="anchor" aria-label="anchor" href="#checklist"></a></h3>
-<ul class="task-list"><li>
-<input type="checkbox" disabled>The PR passes all local unit tests</li>
-<li>
-<input type="checkbox" disabled>I have documented any new features introduced</li>
-<li>
-<input type="checkbox" disabled>If the PR adds a new feature, please add an entry in <code>NEWS.md</code>
-</li>
-<li>
-<input type="checkbox" disabled>A reviewer is assigned to this PR</li>
+<ul class="task-list"><li><label><input type="checkbox">The PR passes all local unit tests</label></li>
+<li><label><input type="checkbox">I have documented any new features introduced</label></li>
+<li><label><input type="checkbox">If the PR adds a new feature, please add an entry in <code>NEWS.md</code></label></li>
+<li><label><input type="checkbox">A reviewer is assigned to this PR</label></li>
 </ul></div>
 
 
