--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     
     <a class="navbar-brand me-2" href="https://ssi-dk.github.io/SCDB/index.html">SCDB</a>
 
-    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">0.3</small>
+    <small class="nav-text text-muted me-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="">0.4.0</small>
 
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,12 +41,14 @@
     <div id="navbar" class="collapse navbar-collapse ms-3">
       <ul class="navbar-nav me-auto">
 <li class="nav-item">
+  <a class="nav-link" href="https://ssi-dk.github.io/SCDB/articles/SCDB.html">Get started</a>
+</li>
+<li class="nav-item">
   <a class="nav-link" href="https://ssi-dk.github.io/SCDB/reference/index.html">Reference</a>
 </li>
 <li class="nav-item dropdown">
   <a href="https://ssi-dk.github.io/SCDB/#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="dropdown-articles">Articles</a>
   <div class="dropdown-menu" aria-labelledby="dropdown-articles">
-    <a class="dropdown-item" href="https://ssi-dk.github.io/SCDB/articles/basic-principles.html">Basic principles</a>
     <a class="dropdown-item" href="https://ssi-dk.github.io/SCDB/articles/slowly-changing-dimension.html">Slowly Changing Dimension methodology</a>
   </div>
 </li>
